fix: change of z-index so the sidebar element shows in front of the map

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ body, html, #root {
 	height: 100vh;
 	position: relative;
 	align-self: flex-end;
+	z-index: 10000;
 }
 
 
